// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders <Profiles /> with populoated data 1`] = `
<div
  class="profiles__Container-bxtkkv-0 lfIDZX"
>
  <h1
    class="profiles__Title-bxtkkv-1 kjBRZT"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-bxtkkv-2 iCNnxQ"
  >
    <div
      class="profiles__User-bxtkkv-6"
    >
      <img
        class="profiles__Picture-bxtkkv-4 gqRDnr"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-bxtkkv-3 CaEMo"
      >
        Iury Nadin
      </p>
    </div>
  </ul>
</div>
`;

exports[`<Profiles /> renders <Profiles /> with populoated data but misc profile image 1`] = `
<div
  class="profiles__Container-bxtkkv-0 lfIDZX"
>
  <h1
    class="profiles__Title-bxtkkv-1 kjBRZT"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-bxtkkv-2 iCNnxQ"
  >
    <div
      class="profiles__User-bxtkkv-6"
    >
      <img
        class="profiles__Picture-bxtkkv-4 gqRDnr"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-bxtkkv-3 CaEMo"
      >
        Iury Nadin
      </p>
    </div>
  </ul>
</div>
`;
